<resources>
    <string name="app_name">GlobaliQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GlobaliQ</string>
    <string name="nav_header_subtitle">globaliqzsz@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ustawienia</string>
    <string name="h">O nas</string>

    <string name="menu_home">Strona Główna</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Ustawienia</string>
    <string name="menu_share">Poleć nas</string>
    <string name="menu_about">O aplikacji</string>
    <string name="menu_contact">Kontakt</string>
    <string name="contact"> Jeśli znalazłeś błąd lub chciałbyś zadać pytanie, skontaktuj się z nami pod adresem e-mail:</string>
    <string name="contact1">globaliqzsz@gmail.com</string>
    <string name="ac">✔ GlobaliQ 1.0 BETA</string>
    <string name="ac1">✔ Aplikacja powstała, aby uświadomić ludziom, jak poważne są problemy dzisiejszego świata oraz pomóc podjąć działania mające na celu zmniejszyć ich stopień zagrożenia.</string>
    <string name="ac2">✔ Aplikacja została stworzona przez uczniów ZSZ Gostyń w ramach konkursu Hack Heroes.</string>
    <string name="set">Tryb wyświetlania</string>
    <string name="problemy">PROBLEMY GLOBALNE</string>
    <string name="title_activity_main2">Zanieczyszczenia powietrza</string>
    <string name="title_activity_main3">Głód</string>
    <string name="title_activity_main4">Ubóstwo</string>
    <string name="title_activity_main5">Bezrobocie</string>
    <string name="title_activity_main6">Dziura ozonowa</string>
    <string name="title_activity_main7">Zanieczyszczenia wód</string>
    <string name="title_activity_main8">Wycinka drzew</string>
    <string name="title_activity_main9">Efekt cieplarniany</string>
    <string name="title_activity_main10">Analfabetyzm</string>
    <string name="title_activity_main11">Terroryzm</string>
    <string name="u">*TRYB CIEMNY TO FUNKCJA EKSPERYMENTALNA, MOŻE NIE DZIAŁAĆ NA WSZYSTKICH URZĄDZENIACH I BYĆ ZALEŻNY OD USTAWIEŃ SYSTEMU*</string>
    <string name="f">Wesprzyj fundację</string>
    <string name="m2">✔ Zanieczyszczenia powietrza negatywnie wpływają na nasze zdrowie, są również szkodliwe dla roślin i zwierząt. Zanieczyszczenia pochodzą głównie z kominów elektrowni, fabryk lub domów oraz z rur wydechowych pojazdów. Przez to powstają kwaśne deszcze i wytwarza się dziura ozonowa. Stan naszego zdrowia się pogarsza, przyroda obumiera. </string>
    <string name="m3">✔ Polacy marnują rocznie aż 9 mln ton żywności. Pod tym względem zajmujemy piąte miejsce w Unii Europejskiej. Pamiętaj, że po drugiej stronie świata są osoby umierające z głodu lub cierpiące na niedożywienie. Według analizy w 2017 roku niedożywionych było 821 milionów ludzi na świecie. Ta liczba stałe wzrasta.</string>
    <string name="m4">✔ Stopień ubóstwa w Polsce (nie tylko) jest duży. Wynika to przede wszystkim ze stopnia bezrobocia, ale nie tylko. Jednym z powodów jest wzrost ceny produktów codziennego użytku, jak i jedzenia. Dodatkowo spadają przychody rolników. Inni mają zbyt niską pensje, aby zaspokoić codzienne potrzeby.</string>
    <string name="m5">✔ Bezrobocie jest coraz częstszym problemem. Powszechnie uważa się bezrobotnych za ludzi leniwych. Tak nie jest. Osoby wykształcone, zdolne i chętne do pracy nie mogą znaleźć miejsca zatrudnienia, a co za tym idzie nie mają żadnych przychodów. Liczba bezrobotnych cały czas rośnie.</string>
    <string name="m6">✔ Ozonosfera jest pewnego rodzaju powłoką otaczającą kulę ziemską. Pełni dla naszej planety ważną rolę, ponieważ chroni przed promieniowaniem ultrafioletowym, które jest niebezpeczne dla organizmów żywych. Dzięki temu możliwe jest życie na Ziemi. Dziura ozonowa powstaje wskutek niszczenia warstwy ozonowej przez związki chemiczne, zwane freonami. W okresie 1987-1992 nad Antarktydą całkowita zawartość ozonu stratosferycznego zmniejszyła się o ponad 50% w stosunku do zawartości z 1970r.</string>
    <string name="m7">✔ Zanieczyszczona woda prowadzi do wymierania istot wodnych oraz stanowi zagrożenie dla człowieka - człowiek kąpiąc się może się nabawić różnych groźnych chorób. Na swiecie pozostaje coraz mniej wody pitnej - wszystko przez zanieczyszczenia. Zanieczyszczenia to głównie śmieci i ścieki gospodarcze.</string>
    <string name="m8">✔ Wycinka drzew coraz bardziej nam zagraża. Drzewa to "płuca świata". Coraz więcej ich wycinamy, np. aby zrobić deski lub przerobić na papier, który w ogromnej ilości jest marnowany. Stosunkowo mało sadzonych jest młodych drzew. Nie chodzi tylko o wycinkę - zagrażają również pożary.</string>
    <string name="m9">✔ Efekt cieplarniany to zjawisko podwyższenia temperatury planety przez obecne w jej atmosferze gazy cieplarniane. Zmiany powodujące wzrost nasilenia efektu cieplarnianego są główną przyczyną obserwowanego na Ziemi globalnego ocieplenia, które w przyszłości może prowadzić do niekorzystnych warunków życia na Ziemi.</string>
    <string name="m10">✔Analfabetyzm związany jest głównie z brakiem edukacji, a to drugie zaś z braku środków na uczęszczanie do szkoły bądź braku szkoły w biednych krajach lub tam, gdzie toczy się wojna.</string>
    <string name="m11">✔ Jednym z głównych problemów dzisiejszego świata jest terroryzm. Związany jest przede wszystkim z chorobami psychicznymi lub wyznaniem religijnym. W wyniku wielu ataków, zginęło wielu ludzi, a zamachowcy się mnożą.</string>
    <string name="m2a">✔ JAK MOŻNA POMÓC? Przede wszystkim postarać się jak najczęściej chodzić bądź jeździc rowerem zamiast samochodem. Waro również zmienić źródło ogrzewania na ekologiczne, np. pompa ciepła lub ogrzewanie gazem. Można również przekazac datek fundacji na rzecz czystego powietrza.</string>
    <string name="m3a">✔ JAK MOŻNA POMÓC? Nie marnuj jedzenia, kupuj tyle ile zjesz, bez nadmiaru! Możesz wspierać fundacje, które finansują jedzenie ubogim.</string>
    <string name="m4a">✔ JAK MOŻNA POMÓC? Można wspierać ubogich w różnych akcjach charytatywnych, np. oddać stare ubrania, meble, kupić żywność. Można również wspierać wszelakie fundacje zajmujące się kupnem niezbędnych rzeczy dla ubogich.</string>
    <string name="m5a">✔ JAK MOŻNA POMÓC? W ramach pomocy można przekazać datek na rzecz organizacji wypłacających zasiłki.</string>
    <string name="m6a">✔ JAK MOZNA POMÓC? Podczas kupowania kosmetyków, szczególnie w sprayu zwracać uwagę na skład - najlepiej, żeby nie zawierły freonu. Na dziurę ozonową ma wpływ zanieczyszczenie powietrza, więc warto o nie dbać.</string>
    <string name="m7a">✔ JAK MOŻNA POMÓC? Nie śmieć - zanieczyszczenia po pewnym czasie przenikają z gleby do wód gruntowych. Na czystość wód ma wpływ czyste powietrze, ponieważ kwaśne deszcze spływają do wód gruntowych i powierzchniowych, więc dbałość o powietrze również jest wskazana. Można przekazać darowiznę na rzecz budowy nowych oczyszczalni ścieków.</string>
    <string name="m8a">✔ JAK MOŻNA POMÓC? Nie marnuj papieru, wykorzystuj obydwie strony kartki, zapełniaj zeszyty do końca. Nie kupuj "na zapas". Nie pal ognisk w pobliżu lasów, nie niszcz przyrody. Możesz brać udział w akcjach sadzenia młodych drzew.</string>
    <string name="m9a">✔ JAK MOŻNA POMÓC? W pierwszej kolejności należy zmniejszyć spalanie węgla, najlepiej używać ekologicznego ogrzewania. Najlepiej ograniczyć używanie wszystkiego, gdzie występuje spalanie, np. częściej jeździć rowerem niż autem.</string>
    <string name="m10a">✔ JAK MOŻNA POMÓC? Niestety, wiele pomóc nie można, najlepszą opcją jest dobrowolne przekazanie pieniędzy na rzecz organizacji zajmujących się zbieraniem funduszy, aby każdy miał dostęp do edukacji.</string>
    <string name="m11a">✔ JAK MOŻNA POMÓC? Jeśli w miejscu publicznym widzisz kogoś, kto się podejrzanie zachowuje, powiadom odpowiednie służby, nie czekaj! Jeśli znasz osobę z zaburzeniami psychicznymi, znajdź dla niej pomoc. Jeśli masz dzieci, sprawdzaj do jakich treści mają dostęp i przekazuj im wiedzę na ten temat.</string>
    <string name="title_activity_main12">Wyślij e-maila</string>
    <string name="mail">Wyślij e-maila</string>
</resources>
