<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/a10"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:onClick="ba"
        android:text="@string/title_activity_main11"
        app:layout_constraintEnd_toStartOf="@+id/a9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a7" />

    <Button
        android:id="@+id/a9"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:onClick="ba"
        android:text="@string/title_activity_main10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/a10"
        app:layout_constraintTop_toBottomOf="@+id/a8" />

    <Button
        android:id="@+id/a8"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:onClick="ba"
        android:text="@string/title_activity_main9"
        app:layout_constraintBottom_toTopOf="@+id/a9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/a7"
        app:layout_constraintTop_toBottomOf="@+id/a6" />

    <Button
        android:id="@+id/a7"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:onClick="ba"
        android:text="@string/title_activity_main8"
        app:layout_constraintBottom_toTopOf="@+id/a10"
        app:layout_constraintEnd_toStartOf="@+id/a8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a3" />

    <Button
        android:id="@+id/a6"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:onClick="ba"
        android:text="@string/title_activity_main7"
        app:layout_constraintBottom_toTopOf="@+id/a8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/a3"
        app:layout_constraintTop_toBottomOf="@+id/a5" />

    <Button
        android:id="@+id/a5"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:onClick="ba"
        android:text="@string/title_activity_main6"
        app:layout_constraintBottom_toTopOf="@+id/a6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/a2"
        app:layout_constraintTop_toBottomOf="@+id/a4" />

    <Button
        android:id="@+id/a4"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:onClick="ba"
        android:text="@string/title_activity_main5"
        app:layout_constraintBottom_toTopOf="@+id/a5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/a"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/a3"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:onClick="ba"
        android:text="@string/title_activity_main4"
        app:layout_constraintBottom_toTopOf="@+id/a7"
        app:layout_constraintEnd_toStartOf="@+id/a6"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a2" />

    <Button
        android:id="@+id/a2"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:onClick="ba"
        android:text="@string/title_activity_main3"
        app:layout_constraintBottom_toTopOf="@+id/a3"
        app:layout_constraintEnd_toStartOf="@+id/a5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a" />

    <Button
        android:id="@+id/a"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:onClick="ba"
        android:text="@string/title_activity_main2"
        app:layout_constraintBottom_toTopOf="@+id/a2"
        app:layout_constraintEnd_toStartOf="@+id/a4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:text="@string/problemy"
        android:textColor="#E00909"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/a4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>